# s3v

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  cli.rs  clipboard.rs  command.rs  command_executor.rs  command_handler.rs  error.rs  event.rs  lib.rs  logging.rs  main.rs  runtime.rs
src/app/: download.rs  filter.rs  key_handlers.rs  mod.rs  navigation.rs  preview_logic.rs  selection.rs
src/command_handler/: image_download.rs  mod.rs  pdf_handler.rs  preview_state.rs  text_download.rs
src/download/: downloader.rs  mod.rs  zip_download.rs
src/preview/: image.rs  mod.rs  page_cache.rs  pdf.rs  pdf_worker.rs  text.rs
src/s3/: client.rs  mod.rs  types.rs
src/search/: index.rs  mod.rs
src/ui/: banner.rs  download.rs  footer.rs  format.rs  header.rs  layout.rs  list.rs  mod.rs  parent_pane.rs  preview.rs  theme.rs
tests/: app_test.rs  integration_test.rs  s3_path_test.rs  ui_test.rs
tests/fixtures/: sample-large.json
