[package]
name = "s3v"
version = "0.1.0"
edition = "2024"
description = "A read-only s3 browser TUI"
license = "MIT"
keywords = ["s3", "aws", "browser", "tui"]

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
aws-sdk-s3 = "1.122.0"
aws-config = "1.8.13"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
ansi-to-tui = "8.0.1"
anyhow = "1.0.101"
thiserror = "2.0.18"
tui-banner = "0.2.3"
serde_json = "1.0"
regex = "1.10"
dirs = "6"
image = "0.25"
ratatui-image = { version = "6", features = ["crossterm"] }
rusqlite = { version = "0.34", features = ["bundled"] }
